k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kuberenetes.io/ingress.class: nginx
    nginx.ingress.kuberenetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
         - path: /
           backend:
             serviceName: client-cluster-ip-service
             servicePort: 3000
         - path: /api/
           backend:
             serviceName: service-cluster-ip-service
             servicePort: 5000
